--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: minima
 google_analytics: G-HGTXJ5KGEF
 permalink: /:categories/:year/:month/:day/:title:output_ext
+
+title: Cloud Architure
+author: Andrew Whitten
