--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: minima
 google_analytics: G-HGTXJ5KGEF
 permalink: /:categories/:year/:month/:day/:title:output_ext
 
-title: Cloud Architure
+title: Cloud Architecture
 author: Andrew Whitten
