--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,9 @@ theme: minima
 google_analytics: G-HGTXJ5KGEF
 permalink: /:categories/:year/:month/:day/:title:output_ext
 
+header_pages:
+  - about.md
+  - portfolio.md
+  
 title: Cloud Architecture
 author: Andrew Whitten
