--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ header_pages:
 social_links:
     twitter: andrew_w_cloud
     github:  andrewwhitten
-    linkedin: jekyll
+   # linkedin: jekyll
   
 title: Cloud Architecture
 author: Andrew Whitten
