--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ minima:
   social_links:
     twitter: andrew_w_cloud
     github:  andrewwhitten
-   # linkedin: jekyll
+    linkedin: andrew-whitten-8835b8
   
 title: Cloud Architecture
 author: Andrew Whitten
